# CMakeExercises

./: README.md
GeographicLib/: CMakeLists.txt  build.sh  main.cpp
minimal/: CMakeLists.txt  build.sh
